--- a/app.css
+++ b/app.css
@@ -140,3 +140,63 @@ hue-6-2: #c18401
 .hljs-link {
   text-decoration: underline;
 }
+
+/* Greenspace Login Button Styles */
+.gs-signin-anchor {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
+  border-radius: 3px !important;
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12),
+    0 1px 1px rgba(0, 0, 0, 0.12) !important;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.12) !important;
+  -webkit-box-sizing: border-box !important;
+  box-sizing: border-box !important;
+  -webkit-transition: background-color 0.218s, -webkit-box-shadow 0.218s !important;
+  transition: background-color 0.218s, -webkit-box-shadow 0.218s !important;
+  -o-transition: background-color 0.218s, box-shadow 0.218s !important;
+  transition: background-color 0.218s, box-shadow 0.218s !important;
+  transition: background-color 0.218s, box-shadow 0.218s,
+    -webkit-box-shadow 0.218s !important;
+  -webkit-user-select: none !important;
+  -webkit-appearance: none !important;
+  background-color: #fff !important;
+  background-image: none !important;
+  color: #333333 !important;
+  cursor: pointer !important;
+  outline: none !important;
+  position: relative !important;
+  text-align: center !important;
+  vertical-align: middle !important;
+  white-space: nowrap !important;
+  width: auto !important;
+  text-decoration: none !important;
+  padding: 12px 16px !important;
+  font-weight: 500 !important;
+  display: -webkit-inline-box !important;
+  display: inline-flex !important;
+  -webkit-box-align: center !important;
+  align-items: center !important;
+  border: 0 !important;
+}
+
+.gs-signin-anchor:hover {
+  background-color: #10633f !important;
+  color: #fff !important;
+}
+
+.gs-signin-icon {
+  margin-right: 12px !important;
+  -webkit-box-sizing: border-box !important;
+  box-sizing: border-box !important;
+  width: 32px !important;
+  height: 32px !important;
+}
+
+.gs-signin-icon-path {
+  fill: #10633f !important;
+}
+
+.gs-signin-anchor:hover .gs-signin-icon-path {
+  fill: #fff !important;
+}
